[project]
name = "mqtt-node-network"
description = "This module is a wrapper around the paho-mqtt client which provides client base classes, logging, error handling, and prometheus metrics."

version = "2.1.4"

readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { email = "matthew@davidson.engineering" },
  { name = "Matthew Davidson" },
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "paho-mqtt>=2.0.0",
  "prometheus_client>=0.20.0",
  "context.api>=0.0",
  "python-dotenv==1.0.1",
  "tomli==2.0.1",
  "PyYAML==6.0.1",
  "python-json-logger>=2.0.7",
  "config-loader @ git+https://github.com/davidson-engineering/python-config-loader.git@v0.1.3",
  "mypy>=1.14.0",

]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=5.0.0"]
metrics = ["fast-database-clients @ git+https://github.com/davidson-engineering/fast-database-clients.git@v2.2.1"]
